# Whatsapp-Analyser

./: .gitignore  CMakeLists.txt  WhatsApp Chat mit 3BT.txt  analyser.c  analyser.h  compile.cmd  dictionary.c  global.h  input.c  main.c  main.h  memory.c  menu.c  menu.h  options.c  output.c  print_to_screen.c  read.c  read.h  read_user.c  settings.c  sort.c  sort.h  structs.c  structs.h
chats/: WhatsApp Chat mit 3BT.txt  chat.txt
config/: settings.cfg
grafics/: icon.ppm  icon.rc  icon.res  whatsapp_logo.ppm  whatsapptest.ppm
include/: analyser.h  dictionary.h  global.h  input.h  main.h  memory.h  menu.h  options.h  output.h  print_to_screen.h  read.h  read_user.h  settings.h  sort.h  std_include.h  structs.h
